feat: iniciando comentarios para relembrar testes no futuro - adicinando then - adicionado verify